apps/mautrix/twitter/overlays/nishir-tailnet/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: twitter
spec:
  gatewayClassName: twitter
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: twitter-i-shikanime-studio-tls
            group: ""
            kind: Secret
