apps/mautrix/twitter/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: twitter
spec:
  hostnames:
    - twitter.i.shikanime.studio
  parentRefs:
    - name: twitter
      sectionName: https
  rules:
    - backendRefs:
        - name: mautrix-twitter
          port: http
