apps/mautrix/twitter/overlays/nishir-tailnet/patch-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: twitter
spec:
  hostnames:
    - twitter.i.shikanime.studio
  parentRefs:
    - name: twitter
      sectionName: https
